Generate Pelican site

--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Email marine.lasbleis .at. univ-nantes . fr Mail address Laboratoire de Planétologie et Géodynamique Bât. 4 Faculté des Sciences et Techniques 2 rue de la Houssinière - BP 92208 44322 Nantes Cedex 3 France">
+        <meta name="description" content="Email marine.lasbleis .at. univ-nantes .dot. fr Mail address Laboratoire de Planétologie et Géodynamique (LPG) Bât. 4 Faculté des Sciences et Techniques 2 rue de la Houssinière - BP 92208 44322...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -72,9 +72,9 @@
         <!-- Content -->
     <div class="container content">
         <h2>Email</h2>
-<p>marine.lasbleis .at. univ-nantes . fr</p>
+<p>marine.lasbleis .at. univ-nantes .dot. fr</p>
 <h2>Mail address</h2>
-<p>Laboratoire de Planétologie et Géodynamique</p>
+<p>Laboratoire de Planétologie et Géodynamique (LPG)</p>
 <p>Bât. 4</p>
 <p>Faculté des Sciences et Techniques</p>
 <p>2 rue de la Houssinière - BP 92208</p>
