--- a/pages/inner-core.html
+++ b/pages/inner-core.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Inner core Proposed internal dynamics Comparing observations and dynamics">
+        <meta name="description" content="Inner core The inner core of the Earth is a solid iron-alloy sphere at its very center, surrounded by the molten outer core. It&#39;s the most unaccessible place on Earth, burried 5500 km beneath us,...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -72,6 +72,8 @@
         <!-- Content -->
     <div class="container content">
         <h2>Inner core</h2>
+<p>The inner core of the Earth is a solid iron-alloy sphere at its very center, surrounded by the molten outer core. It's the most unaccessible place on Earth, burried 5500 km beneath us, and blanketed by an opaque layer of silicates, the mantle. As the surface of the Earth is slowly and unexorably recycled by a combination of weathering, subduction and volcanism and the mantle of the Earth is mixed by convection on geological timescale, the core of our planet may be its most primordial feature. By understanding the state of the core now, and its past evolution, we aim at understanding the very early times of the Earth as well as the thermal and chemical evolution since its formation.</p>
+<p>You'll find on this page a couple of ressources from my past and current work. Feel free to share the material and provide accurate citations when using it. </p>
 <h2>Proposed internal dynamics</h2>
 <p><img alt="With Lorentz force" src="/images/Lorentz_series.png"></p>
 <p><img alt="Published dynamics" src="/images/IC_dyn.png"></p>
