--- a/pages/research.html
+++ b/pages/research.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Research interests I&#39;m interested in the dynamics of the interior of planets, and its evolution since the planetary formation, with a particular interest to the planetary cores and the evolution...">
+        <meta name="description" content="Research interests I&#39;m interested in the dynamics of planetary interiors, and its evolution since planets&#39; formation, with a particular interest in the planetary cores and the evolution of the...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -72,21 +72,21 @@
         <!-- Content -->
     <div class="container content">
         <h2>Research interests</h2>
-<p>I'm interested in the dynamics of the interior of planets, and its evolution since the planetary formation, with a particular interest to the planetary cores and the evolution of the magnetic field.</p>
+<p>I'm interested in the dynamics of planetary interiors, and its evolution since planets' formation, with a particular interest in the planetary cores and the evolution of the magnetic field.</p>
 <p>During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history. In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets.</p>
 <p>I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).</p>
 <h2>Up-to-date CV</h2>
-<p>September 2018: <a href="/files/CV.pdf">CV</a></p>
+<p><a href="/files/CV.pdf">CV</a></p>
 <h2>Research positions</h2>
 <ul>
 <li>
-<p>2018 - now: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
+<p>Sept. 2018 - now: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
 </li>
 <li>
-<p>2017 - 2018: ELSI Research Scientist at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
+<p>Apr. 2017 - Aug. 2018: ELSI Research Scientist at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
 </li>
 <li>
-<p>2015 - 2017: JSPS Fellowship FY2015 at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
+<p>Apr. 2015 - Apr. 2017: JSPS Fellowship FY2015 at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
 </li>
 <li>
 <p>Dec. 2014: PhD at Laboratoire de Geologie de Lyon, Ecole Normale Superieure de Lyon, France. "Dynamique et evolution de la graine terrestre" (dynamics and evolution of the Earth's inner core) with Stephane Labrosse. Details (research and teaching)</p>
