--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and at a Nerd Nite Tokyo. For...">
+        <meta name="description" content="In 2017, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and at a Nerd Nite Tokyo. For people...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -71,9 +71,9 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>This year, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and at a <a href="https://tokyo.nerdnite.com/">Nerd Nite Tokyo</a>. </p>
+        <p>In 2017, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and at a <a href="https://tokyo.nerdnite.com/">Nerd Nite Tokyo</a>. </p>
 <hr>
-<p>For people who can read French, I am also involved in a new blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>.</p>
+<p>For people who can read French, I am also involved in a blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>.</p>
 <hr>
 <p>As a PhD student, I gathered a small team of students (master and PhD students) to design small experiments for explaining oceanography and basic fluid dynamics. We presented them to schools and highschool students, as well as undergrad students. We also participated to the French "fete de la Science" (2011, 2012, 2013) and had a lot of fun playing with water and science! The experiments are still used during Fete de la Science in Lyon, so look for the tsunami experiment!</p>
 <p><img alt="Nerd Nite" src="/images/NerdNite.jpg">
