Generate Pelican site

--- a/msca.html
+++ b/msca.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ELSI is part of the World Premier International Research Center Initiative (WPI) of the Ministry of Education, Culture, Sports, Science and Technology (MEXT.) in Japan. Every year or almost, all...">
-        <meta name="keywords" content="2018, summer, WPI">
+        <meta name="description" content="In March 2019, I started a new project and a new position. I am now officially a MSCA-IF Post doctoral fellow. More info on MSCA-IF (Marie Skłodowska-Curie Individual Fellowship) on the European...">
+        <meta name="keywords" content="EU, job, msca, new, position">
         <link rel="icon" href="/favicon.ico">
 
-        <title>WPI Visit 2018 - Marine Lasbleis</title>
+        <title>MSCA-IF - Marine Lasbleis</title>
 
         <!-- Stylesheets -->
         <link href="/theme/css/bootstrap.min.css" rel="stylesheet">
@@ -59,13 +59,13 @@
         <div class="row">
               <div class="col-lg-12">
                   <div class="header-content">
-                      <h1 class="header-title">WPI Visit 2018</h1>
-                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Sun 15 July 2018,  <a href="/category/posts.html">Posts</a></p>
+                      <h1 class="header-title">MSCA-IF</h1>
+                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Mon 19 August 2019,  <a href="/category/posts.html">Posts</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
                       <p class="pull-right header-tags">
                           <span class="glyphicon glyphicon-tags mr5" aria-hidden="true"></span>
-<a href="/tag/2018.html">2018</a>, <a href="/tag/summer.html">summer</a>, <a href="/tag/wpi.html">WPI</a>                      </p>
+<a href="/tag/eu.html">EU</a>, <a href="/tag/job.html">job</a>, <a href="/tag/msca.html">msca</a>, <a href="/tag/new.html">new</a>, <a href="/tag/position.html">position</a>                      </p>
                   </div>
               </div>
         </div>
@@ -79,8 +79,9 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>ELSI is part of the World Premier International Research Center Initiative (WPI) of the Ministry of Education, Culture, Sports, Science and Technology (MEXT.) in Japan. Every year or almost, all researchers and professors in ELSI are presenting their research to a WPI committee. </p>
-<p>This year, I will be presenting my on-going research on the stratified layers in the Earth's core at this meeting!</p>
+        <p>In March 2019, I started a new project and a new position. I am now officially a MSCA-IF Post doctoral fellow. More info on MSCA-IF (Marie Skłodowska-Curie Individual Fellowship) on the <a href="https://ec.europa.eu/research/mariecurieactions/news/2019-msca-call-individual-fellowships-open_en">European Commission website (for this year call, for example)</a>. This is an incredible opportunity for me, and the reason I came back to Europe last year. </p>
+<p>The project InDyMag is about investigating the long term evolution of planetary cores, with a particular interest for the magnetic field. Basically, how a core evolves and crystallizes and the implications for predictions and observations of magnetic field. </p>
+<p>Stay tuned for new results soon, and I will be talking at the <a href="https://www.epsc-dps2019.eu/">EPSC-DPS</a> meeting mid-September in Geneva!</p>
 
 
         
