--- a/tags.html
+++ b/tags.html
@@ -82,10 +82,14 @@
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/conference.html">conference</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
-            	<dd><a href="/tag/job.html">job</a></dd>
+            	<dd><a href="/tag/eu.html">EU</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
-            	<dd><a href="/tag/new.html">new</a></dd>
+            	<dd><a href="/tag/job.html">job</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/msca.html">msca</a></dd>
+            	<dt><span class="label label-default">3</span> articles </dt>
+            	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/position.html">position</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/poster.html">poster</a></dd>
