--- a/pages/research.html
+++ b/pages/research.html
@@ -76,11 +76,14 @@
 <p>During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history. In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets.</p>
 <p>I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).</p>
 <h2>Up-to-date CV</h2>
-<p><a href="/files/CV.pdf">CV</a></p>
+<p><a href="/files/CV.pdf">link to pdf: CV</a></p>
 <h2>Research positions</h2>
 <ul>
 <li>
-<p>Sept. 2018 - now: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
+<p>March 2019 - now: MSCA-IF Post doctoral fellow at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
+</li>
+<li>
+<p>Sept. 2018 - March 2019: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
 </li>
 <li>
 <p>Apr. 2017 - Aug. 2018: ELSI Research Scientist at Earth-Life Science Institute (Tokyo Institute of Technology, Tokyo, Japan)</p>
