Generate Pelican site

--- a/pages/research.html
+++ b/pages/research.html
@@ -98,6 +98,12 @@
 <h2>Recent publications</h2>
 <ul>
 <li>
+<p>2020 - "The Fate of Liquids Trapped During the Earth's Inner Core Growth" <strong>M. Lasbleis</strong>, M. Kervazo, G. Choblet, Geophysical Research Letters,  47, e2019GL085654. <a href="https://doi.org/10.1029/2019GL085654">DOI:10.1029/2019GL085654</a>, <a href="https://arxiv.org/abs/1912.12258">arxiv</a> <a href="https://github.com/MarineLasbleis/mushdynamics">github repository</a></p>
+</li>
+<li>
+<p>2020 - "Fluid Dynamics of Earth’s Core: Geodynamo, Inner Core Dynamics, Core Formation", R. Deguen, <strong>M. Lasbleis</strong>, In: Le Bars M., Lecoanet D. (eds) Fluid Mechanics of Planets and Stars. CISM International Centre for Mechanical Sciences (Courses and Lectures), vol 595. Springer, Cham <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-22074-7_5">Chapter</a> <a href="https://arxiv.org/abs/1905.10416">arxiv</a></p>
+</li>
+<li>
 <p>2017 - <em>GrowYourIC: a step towards a coherent model of seismic structure</em>, <strong>M. Lasbleis</strong>, L. Waszek, E. Day. Geochemistry, Geophysics, Geosystems, 18 (11), 4016-4026. <a href="https://github.com/MarineLasbleis/GrowYourIC">Github repository</a> </p>
 </li>
 <li>
