--- a/tags.html
+++ b/tags.html
@@ -79,20 +79,28 @@
             	<dd><a href="/tag/2018.html">2018</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/agu.html">agu</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/compaction.html">compaction</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/conference.html">conference</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/eu.html">EU</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/inner-core.html">inner core</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/job.html">job</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/msca.html">msca</a></dd>
-            	<dt><span class="label label-default">3</span> articles </dt>
+            	<dt><span class="label label-default">4</span> articles </dt>
             	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/paper.html">paper</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/position.html">position</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/poster.html">poster</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/publication.html">publication</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/students.html">students</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
