--- a/archives.html
+++ b/archives.html
@@ -75,6 +75,8 @@
         <div class="container content archive">
             <h2><a href="/archives.html"></a></h2>
             <dl class="dl-horizontal">
+            	<dt>Sun 05 January 2020</dt>
+            	<dd><a href="/compaction.html">New paper: inner core compaction</a></dd>
             	<dt>Mon 19 August 2019</dt>
             	<dd><a href="/msca.html">MSCA-IF</a></dd>
             	<dt>Sun 02 December 2018</dt>
