Generate Pelican site

--- a/compaction.html
+++ b/compaction.html
@@ -19,7 +19,7 @@
 
         <!-- RSS Feeds -->
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Marine Lasbleis Full Atom Feed" />
-        <link href="/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Marine Lasbleis Categories Atom Feed" />
+        <link href="/feeds/posts.atom.xml" type="application/atom+xml" rel="alternate" title="Marine Lasbleis Categories Atom Feed" />
         <!-- /RSS Feeds -->
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -80,6 +80,7 @@
         <!-- Content -->
     <div class="container content">
         <p>We published a new work in Geophysical Research Letters:<a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019GL085654">the fate of liquids trapped during the Earth's inner core growth</a>. This is about compaction of a mushy inner core, and what we can learn about the supercooling hypothesis (delayed nucleation). </p>
+<p>The Arxiv version is still available <a href="https://arxiv.org/abs/1912.12258">here</a>.</p>
 
 
         
