Generate Pelican site

--- a/exostructure.html
+++ b/exostructure.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="EU, exoplanets, msca, new, paper, publication, structure">
         <link rel="icon" href="/favicon.ico">
 
-        <title>New paper: exoplanets structure - Marine Lasbleis</title>
+        <title>New paper: exoplanets structure (Noack & Lasbleis 2020) - Marine Lasbleis</title>
 
         <!-- Stylesheets -->
         <link href="/theme/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
         <div class="row">
               <div class="col-lg-12">
                   <div class="header-content">
-                      <h1 class="header-title">New paper: exoplanets structure</h1>
+                      <h1 class="header-title">New paper: exoplanets structure (Noack & Lasbleis 2020)</h1>
                       <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Mon 25 May 2020,  <a href="/category/posts.html">Posts</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
@@ -79,7 +79,7 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>Dr. Noack and I published a new work in Geophysical Research Letters:<a href="https://www.aanda.org/component/article?access=doi&amp;doi=10.1051/0004-6361/202037723">Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable iron content </a> (free access).</p>
+        <p>Dr. Noack and I published a new work in Geophysical Research Letters:<a href="https://www.aanda.org/component/article?access=doi&amp;doi=10.1051/0004-6361/202037723">Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable iron content </a> (free access). </p>
 <p>We describe and parametrize the internal structure and physical parameters of the different layers of terrestrial exoplanets (without large atmospheres). The parametrization is also available from the group of Dr. Noack in Berlin <a href="http://geodyn-chic.de/tools">as a tool</a>, and is also implemented in Python in a <a href="https://gitlab.univ-nantes.fr/lasbleis-m/planetstructure">gitlab repository at Université de Nantes</a>.</p>
 
 
