--- a/pages/research.html
+++ b/pages/research.html
@@ -98,6 +98,9 @@
 <h2>Recent publications</h2>
 <ul>
 <li>
+<p>2020 - "Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable iron content" L. Noack, <strong>M. Lasbleis</strong>, Astronomy and Astrophysics. Accepted on April 2020. <a href="https://doi.org/10.1051/0004-6361/202037723">DOI:10.1051/0004-6361/202037723</a></p>
+</li>
+<li>
 <p>2020 - "The Fate of Liquids Trapped During the Earth's Inner Core Growth" <strong>M. Lasbleis</strong>, M. Kervazo, G. Choblet, Geophysical Research Letters,  47, e2019GL085654. <a href="https://doi.org/10.1029/2019GL085654">DOI:10.1029/2019GL085654</a>, <a href="https://arxiv.org/abs/1912.12258">arxiv</a> <a href="https://github.com/MarineLasbleis/mushdynamics">github repository</a></p>
 </li>
 <li>
