Generate Pelican site

--- a/exostructure.html
+++ b/exostructure.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Dr. Noack and I published a new work in Geophysical Research Letters:Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but...">
+        <meta name="description" content="Dr. Noack and I published a new work in Astronomy and Astrophysics:Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable...">
         <meta name="keywords" content="EU, exoplanets, msca, new, paper, publication, structure">
         <link rel="icon" href="/favicon.ico">
 
@@ -79,7 +79,7 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>Dr. Noack and I published a new work in Geophysical Research Letters:<a href="https://www.aanda.org/component/article?access=doi&amp;doi=10.1051/0004-6361/202037723">Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable iron content </a> (free access). </p>
+        <p>Dr. Noack and I published a new work in Astronomy and Astrophysics:<a href="https://www.aanda.org/component/article?access=doi&amp;doi=10.1051/0004-6361/202037723">Parameterisations of interior properties of rocky planets. An investigation of planets with Earth-like compositions but variable iron content </a> (free access). </p>
 <p>We describe and parametrize the internal structure and physical parameters of the different layers of terrestrial exoplanets (without large atmospheres). The parametrization is also available from the group of Dr. Noack in Berlin <a href="http://geodyn-chic.de/tools">as a tool</a>, and is also implemented in Python in a <a href="https://gitlab.univ-nantes.fr/lasbleis-m/planetstructure">gitlab repository at Université de Nantes</a>.</p>
 
 
