Generate Pelican site

--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -46,6 +46,7 @@
                             <a  href="/pages/research.html">Research</a>
                             <a  href="/pages/sci-com.html">Science com.</a>
                             <a  class="active" href="/pages/contact-info.html">Contact</a>
+                            <a  href="/pages/indymag.html">IndyMag</a>
                             <a  href="/pages/inner-core.html">Inner Core</a>
                     </div>
                 </div>
