--- a/pages/indymag.html
+++ b/pages/indymag.html
@@ -34,7 +34,7 @@
     <body>
 
         <!-- Header -->
-    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/Earth.png'); background-position: center; background-size: cover; ">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/radius_exo.png'); background-position: center; background-size: cover; ">
 
             <!-- Static navbar -->
             <div class="container">
@@ -46,8 +46,8 @@
                             <a  href="/pages/research.html">Research</a>
                             <a  href="/pages/sci-com.html">Science com.</a>
                             <a  href="/pages/contact-info.html">Contact</a>
-                            <a  class="active" href="/pages/indymag.html">IndyMag</a>
                             <a  href="/pages/inner-core.html">Inner Core</a>
+                            <a  class="active" href="/pages/indymag.html">IndyMag</a>
                     </div>
                 </div>
             </div>
