--- a/pages/research.html
+++ b/pages/research.html
@@ -43,11 +43,6 @@
                         <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo">Marine Lasbleis</a>
                     </div>
                     <div class="nav pull-right">
-                            <a  class="active" href="/pages/research.html">Research</a>
-                            <a  href="/pages/sci-com.html">Science com.</a>
-                            <a  href="/pages/contact-info.html">Contact</a>
-                            <a  href="/pages/inner-core.html">Inner Core</a>
-                            <a  href="/pages/indymag.html">IndyMag</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +70,9 @@
         <h2>Research interests</h2>
 <p>I'm interested in the dynamics of planetary interiors, and its evolution since planets' formation, with a particular interest in the planetary cores and the evolution of the magnetic field.</p>
 <p>During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history. In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets.</p>
-<p>I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).</p>
+<!-- I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).
+-->
+
 <h2>Up-to-date CV</h2>
 <p><a href="/files/CV.pdf">link to pdf: CV</a></p>
 <h2>Research positions</h2>
