Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -73,12 +73,14 @@
             <dl class="dl-horizontal">
             	<dt><span class="label label-default">3</span> articles </dt>
             	<dd><a href="/tag/2018.html">2018</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/agu.html">agu</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/compaction.html">compaction</a></dd>
-            	<dt><span class="label label-default">2</span> articles </dt>
+            	<dt><span class="label label-default">4</span> articles </dt>
             	<dd><a href="/tag/conference.html">conference</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/elsi.html">ELSI</a></dd>
             	<dt><span class="label label-default">3</span> articles </dt>
             	<dd><a href="/tag/eu.html">EU</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
@@ -95,7 +97,7 @@
             	<dd><a href="/tag/paper.html">paper</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/position.html">position</a></dd>
-            	<dt><span class="label label-default">1</span> article </dt>
+            	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/poster.html">poster</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/publication.html">publication</a></dd>
