Generate Pelican site

--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -43,6 +43,11 @@
                         <a class="pull-left" href="/"><img class="mr20" src="/images/logo.png" alt="logo">Marine Lasbleis</a>
                     </div>
                     <div class="nav pull-right">
+                            <a  href="/pages/research.html">Research</a>
+                            <a  class="active" href="/pages/sci-com.html">Science com.</a>
+                            <a  href="/pages/contact-info.html">Contact</a>
+                            <a  href="/pages/inner-core.html">Inner Core</a>
+                            <a  href="/pages/indymag.html">IndyMag</a>
                     </div>
                 </div>
             </div>
