Generate Pelican site

--- a/elsi2021.html
+++ b/elsi2021.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="I am co-organizing the 9th ELSI Symposium, focused on Science in Society. The meeting will happen online, with events happening at 2pm JST, 2pm CET and 2pm. Join us!">
+        <meta name="description" content="I am co-organizing the 9th ELSI Symposium, focused on Science in Society. The meeting will happen online, with events happening at 2pm JST, 2pm CET and 2pm on January 25. to 28. 2021. Join us!">
         <meta name="keywords" content="conference, ELSI">
         <link rel="icon" href="/favicon.ico">
 
@@ -61,7 +61,7 @@
               <div class="col-lg-12">
                   <div class="header-content">
                       <h1 class="header-title">Symposium ELSI 2021</h1>
-                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Fri 01 October 2021,  <a href="/category/posts.html">Posts</a></p>
+                      <p class="header-date"> <a href="/author/marine-lasbleis.html">Marine Lasbleis</a>, Sun 10 January 2021,  <a href="/category/posts.html">Posts</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
                       <p class="pull-right header-tags">
@@ -80,7 +80,7 @@
 
         <!-- Content -->
     <div class="container content">
-        <p>I am co-organizing the 9th ELSI Symposium, focused on <a href="https://symposium2021.elsi.jp/">Science in Society</a>. The meeting will happen online, with events happening at 2pm JST, 2pm CET and 2pm. Join us!</p>
+        <p>I am co-organizing the 9th ELSI Symposium, focused on <a href="https://symposium2021.elsi.jp/">Science in Society</a>. The meeting will happen online, with events happening at 2pm JST, 2pm CET and 2pm on January 25. to 28. 2021. Join us!</p>
 
 
         
