Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -91,6 +91,8 @@
             	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/exoplanets.html">exoplanets</a></dd>
             	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/fds.html">FdS</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
             	<dd><a href="/tag/inner-core.html">inner core</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/job.html">job</a></dd>
@@ -98,6 +100,8 @@
             	<dd><a href="/tag/msca.html">msca</a></dd>
             	<dt><span class="label label-default">5</span> articles </dt>
             	<dd><a href="/tag/new.html">new</a></dd>
+            	<dt><span class="label label-default">1</span> article </dt>
+            	<dd><a href="/tag/outreach.html">outreach</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
             	<dd><a href="/tag/paper.html">paper</a></dd>
             	<dt><span class="label label-default">2</span> articles </dt>
