Generate Pelican site

--- a/pages/sci-com.html
+++ b/pages/sci-com.html
@@ -73,15 +73,18 @@
         <!-- Content -->
     <div class="container content">
         <p>Interacting with the public is very important for me. Small scales experiments are wonderful to introduce fluid dynamics to everyone and I have been presenting them to the public since 2012 during my PhD in Lyon. </p>
-<hr>
-<p>In 2017, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video soon to be uploaded) and at a <a href="https://tokyo.nerdnite.com/">Nerd Nite Tokyo</a>. </p>
-<hr>
+<h2>Scientific conferences</h2>
+<p>In 2017, I presented my research topics during several events destinated to a general audience: the ELSIOriginsI event (pictures and video to be uploaded) and at a <a href="https://tokyo.nerdnite.com/">Nerd Nite Tokyo</a>.</p>
+<p><img alt="Nerd Nite" src="/images/NerdNite.jpg"></p>
+<h2>Scientific communication online</h2>
 <p>For people who can read French, I am also involved in a blog on the structure/composition/dynamics of the interior of planets, with a particular focus for the magnetic field. It's called <a href="https://toutlabasendessous.wordpress.com/">"Tout là bas en dessous"</a>.</p>
-<hr>
+<h2>Fete de la Science</h2>
 <p>As a PhD student, I gathered a small team of students (master and PhD students) to design small experiments for explaining oceanography and basic fluid dynamics. We presented them to schools and highschool students, as well as undergrad students. We also participated to the French "fete de la Science" (2011, 2012, 2013) and had a lot of fun playing with water and science! The experiments are still used during Fete de la Science in Lyon, so look for the tsunami experiment!</p>
-<p><img alt="Nerd Nite" src="/images/NerdNite.jpg">
-<img alt="Fete de la Science" src="/images/FdS1.jpg">
+<p><img alt="Fete de la Science 2012" src="/images/FdS1.jpg">
 <img alt="ELSI Youchien" src="/images/youchien.jpg"></p>
+<p>In 2020, we proposed another event for Fete de la Science, in Nantes. I organized several fluid dynamics experiments on rotation and convection for middle and high school students. </p>
+<p><img alt="Fete de la Science 2020" src="{filename}/images/FdS20-1.jpg">
+<img alt="Fete de la Science -- convection" src="/images/eau_convection.gif"></p>
     </div>
         <!-- /Content --> 
 
