Generate Pelican site

--- a/pages/research.html
+++ b/pages/research.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Research interests I&#39;m interested in the dynamics of planetary interiors, and its evolution since planets&#39; formation, with a particular interest in the planetary cores and the evolution of the...">
+        <meta name="description" content="Previous research In the past 10 years, I have been studying the dynamics of planetary interiors, and its evolution since planets&#39; formation, with a particular interest in the planetary cores and...">
         <meta name="keywords" content="">
         <link rel="icon" href="/favicon.ico">
 
@@ -72,18 +72,18 @@
 
         <!-- Content -->
     <div class="container content">
-        <h2>Research interests</h2>
-<p>I'm interested in the dynamics of planetary interiors, and its evolution since planets' formation, with a particular interest in the planetary cores and the evolution of the magnetic field.</p>
+        <h2>Previous research</h2>
+<p>In the past 10 years, I have been studying the dynamics of planetary interiors, and its evolution since planets' formation, with a particular interest in the planetary cores and the evolution of the magnetic field.</p>
 <p>During my PhD, I have studied the dynamics in the Earth's inner core and its relationship with the Earth thermal and chemical history. In my post docs, I am studying the effect of melts and co existence of melts and solids on the dynamics of deep Earth. This is particularly interesting for the inner core formation and for the magma ocean evolutions. I have also started to explore the thermal and chemical history of other planets in the solar system and outside. I am working with astronomers looking at exoplanets to try to understand the link between atmosphere and internal properties of planets.</p>
 <!-- I have ongoing collaborations with: John Hernlund (Tokyo Tech), Kei Hirose (Tokyo Tech), Matthieu Laneuville (Tokyo Tech), George Helffrich (Tokyo Tech), Ramon Brasser (Tokyo Tech), Elizabeth Tasker (JAXA), Renaud Deguen (Lyon), Stéphane Labrosse (Lyon), Lauren Waszek (Univ. New Mexico / ANU), Elizabeth Day (Imperial College London), Lena Noack (Free University, Berlin).
 -->
 
-<h2>Up-to-date CV</h2>
+<h2>Academic CV</h2>
 <p><a href="/files/CV.pdf">link to pdf: CV</a></p>
 <h2>Research positions</h2>
 <ul>
 <li>
-<p>March 2019 - now: MSCA-IF Post doctoral fellow at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
+<p>March 2019 - June 2021: MSCA-IF Post doctoral fellow at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
 </li>
 <li>
 <p>Sept. 2018 - March 2019: post doctoral researcher at Laboratoire de Planetologie et Geodynamique de Nantes (Nantes, France)</p>
