--- a/authors.html
+++ b/authors.html
@@ -76,6 +76,8 @@
         <div class="container content archive">
             <h2><a href="/author/marine-lasbleis.html">Marine Lasbleis</a></h2>
             <dl class="dl-horizontal">
+            	<dt>Mon 28 June 2021</dt>
+            	<dd><a href="/new-adv.html">New adventure</a></dd>
             	<dt>Sun 10 January 2021</dt>
             	<dd><a href="/elsi2021.html">Symposium ELSI 2021</a></dd>
             	<dt>Wed 02 December 2020</dt>
